welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:1: error: type mismatch;
 found   : Double(13.5)
 required: Int
for (compteur1 <- 1 to 13.5){
                       ^